compiler/pl0/project/tests/error/integer_overflow.pl0
program main;
const a = 2147483647, b = 1000000000000;
write(a).
